# ChangeLog for app-misc/cl-decoration-meta
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-decoration-meta-11.15 (07 Mar 2012)

  07 Mar 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.12-r1.ebuild, +cl-decoration-meta-11.15.ebuild:
  version bump

*cl-decoration-meta-11.12-r1 (23 Jan 2012)

  23 Jan 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.12.ebuild, +cl-decoration-meta-11.12-r1.ebuild:
  remove exception gtk-engines-qtcurve

*cl-decoration-meta-11.12 (05 Dec 2011)

  05 Dec 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.9.ebuild, +cl-decoration-meta-11.12.ebuild:
  version bump

*cl-decoration-meta-11.9 (20 Sep 2011)

  20 Sep 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.6-r1.ebuild, +cl-decoration-meta-11.9.ebuild:
  version bump

*cl-decoration-meta-11.6-r1 (29 Aug 2011)

  29 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.6.ebuild, +cl-decoration-meta-11.6-r1.ebuild:
  remote colorschemes vimcommander

*cl-decoration-meta-11.6 (18 May 2011)

  18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.3-r1.ebuild, -cl-decoration-meta-11.3-r2.ebuild,
  +cl-decoration-meta-11.6.ebuild:
  Version bump.

*cl-decoration-meta-11.3-r2 (30 Mar 2011)

  30 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-decoration-meta-11.3-r2.ebuild:
  Removed redundant themes (Gentoo bugs #352263 and #292201)

*cl-decoration-meta-11.3-r1 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.3.ebuild, +cl-decoration-meta-11.3-r1.ebuild:
  remove x11-themes/gtk-engines-qtcurve, add x11-themes/oxygen-gtk in CLD

*cl-decoration-meta-11.3 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>