@@ -1,2 +1,3 @@
 EBUILD cl-decoration-meta-11.15-r1.ebuild 858 RMD160 3b84065fbec0dcffaf7a69a1a0836d224fe6e5de SHA1 70b40b738e4736f90f01d715dd32895589624d40 SHA256 904c7b3677e2deacf739b7651de9f8e4eea128d449d11195377b05b5bd3c786c
-MISC ChangeLog 3331 RMD160 8a555e829c11bbbd373880630f8de278414267dd SHA1 beb78658618c61518d69da5cb227a45eaee67319 SHA256 3215a528b389526528a8d7564c1ba7fd77d13976080f09f6ea6078ff01219961
+EBUILD cl-decoration-meta-11.15-r2.ebuild 892 RMD160 55e855a816e5252b74dfa991738682ec3560d0ab SHA1 5d9ce2390bee4fb403fbd6392535a5472276cae4 SHA256 0a71320881e6020e8a78b46bbf36f2e4cb082cb6bf8cd8cc031ac2010b96b324
+MISC ChangeLog 3511 RMD160 0d8520d2f2518de14708a28fff1c931ff7626225 SHA1 17b382a1d082259b07a798a1bff93b14f2d07d8c SHA256 aa7ffe5bd5ddb32327b73a057c54723c7f671365320f3964ffa914ebdcca0e7b
