@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-decoration-meta-11.15-r2 (15 May 2012)
+
+  15 May 2012; Yuriy Blokhin (jblohin) <jb@calculate.ru>
+  +cl-decoration-meta-11.15-r2.ebuild:
+  Added gtk3 for x11-themes/oxygen-gtk
+
 *cl-decoration-meta-11.15 (07 Mar 2012)
 
   07 Mar 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
